// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should display icon with tooltip if tooltipText is set 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2 > div {
  width: auto;
}

.emotion-1 {
  margin-left: 8px;
  margin-bottom: 4px;
}

<div
  data-cy="textInput textInput.standard"
>
  <div
    className="emotion-2"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      htmlFor="input.with.tooltip"
    >
      Tooltip Message Test
    </label>
    <span
      className="emotion-1"
    >
      <Tooltip
        id="labelTooltip-input.with.tooltip"
        maxWidth={200}
        trigger={
          <Icon
            color="#AEB0B4"
            shape="system-circle-question"
            size="xs"
          />
        }
      >
        Example Tooltip
      </Tooltip>
    </span>
  </div>
  <FormFieldWrapper
    id="input.with.tooltip"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should display validation message if set & appearance == Error 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
  color: var(--themeError,#EB293A);
  fill: var(--themeError,#EB293A);
}

<div
  data-cy="textInput textInput.error"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="input.error.with.message"
  >
    Error Message Test
  </label>
  <FormFieldWrapper
    errors={
      Array [
        "This is an error message",
        "this is a second error message",
      ]
    }
    id="input.error.with.message"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should hide label if \`showInputLabel\` set to false 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="input.with.hidden.label"
  >
    I'm not displayed
  </label>
  <FormFieldWrapper
    id="input.with.hidden.label"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should not display validation message if set & appearance == Success 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.success"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="input.success.without.message"
  >
    No Error Message Test
  </label>
  <FormFieldWrapper
    errors={
      Array [
        "This is an error message",
      ]
    }
    id="input.success.without.message"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should render all appearances focus 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2 > div {
  width: auto;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  padding: 0;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  height: 36px;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-color: var(--themeBorder,#DADDE2);
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1::-moz-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1:-ms-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1::placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input {
  font-size: inherit;
  color: inherit;
}

.emotion-1 input::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input::-moz-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input:-ms-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input::placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1:focus {
  background-color: rgba(125,88,255,0.05);
  border-color: var(--themeBrandPrimary,#7D58FF);
}

<TextInput
  appearance="standard"
  id="test.input"
  showInputLabel={true}
  type="text"
>
  <div
    data-cy="textInput textInput.standard"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      htmlFor="test.input"
    />
    <FormFieldWrapper
      id="test.input"
    >
      <div>
        <div
          className="emotion-2"
        >
          <input
            aria-describedby=""
            aria-invalid={false}
            className="emotion-1"
            data-cy="textInput-input"
            id="test.input"
            type="text"
          />
        </div>
        <div
          data-cy="textInput-hintContent"
        />
      </div>
    </FormFieldWrapper>
  </div>
</TextInput>
`;

exports[`TextInput should render all appearances focus 2`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
  color: var(--themeError,#EB293A);
  fill: var(--themeError,#EB293A);
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2 > div {
  width: auto;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  padding: 0;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  height: 36px;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-color: var(--themeError,#EB293A);
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1::-moz-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1:-ms-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1::placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input {
  font-size: inherit;
  color: inherit;
}

.emotion-1 input::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input::-moz-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input:-ms-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input::placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1:focus {
  background-color: rgba(235,41,58,0.05);
}

<TextInput
  appearance="error"
  id="test.input"
  showInputLabel={true}
  type="text"
>
  <div
    data-cy="textInput textInput.error"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      htmlFor="test.input"
    />
    <FormFieldWrapper
      id="test.input"
    >
      <div>
        <div
          className="emotion-2"
        >
          <input
            aria-describedby=""
            aria-invalid={false}
            className="emotion-1"
            data-cy="textInput-input textInput-input.error"
            id="test.input"
            type="text"
          />
        </div>
        <div
          data-cy="textInput-hintContent"
        />
      </div>
    </FormFieldWrapper>
  </div>
</TextInput>
`;

exports[`TextInput should render all appearances focus 3`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  height: auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2 > div {
  width: auto;
}

.emotion-1 {
  background: none;
  border: 0;
  box-shadow: none;
  padding: 0;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  height: 36px;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-color: var(--themeSuccess,#14C684);
}

.emotion-1:focus {
  outline: 0;
}

.emotion-1::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1::-moz-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1:-ms-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1::placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input {
  font-size: inherit;
  color: inherit;
}

.emotion-1 input::-webkit-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input::-moz-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input:-ms-input-placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1 input::placeholder {
  color: var(--themeTextColorPrimary,#1B2029);
  opacity: 0.4;
}

.emotion-1:focus {
  background-color: rgba(20,198,132,0.05);
}

<TextInput
  appearance="success"
  id="test.input"
  showInputLabel={true}
  type="text"
>
  <div
    data-cy="textInput textInput.success"
  >
    <label
      className="emotion-0"
      data-cy="textInput-label"
      htmlFor="test.input"
    />
    <FormFieldWrapper
      id="test.input"
    >
      <div>
        <div
          className="emotion-2"
        >
          <input
            aria-describedby=""
            aria-invalid={false}
            className="emotion-1"
            data-cy="textInput-input textInput-input.success"
            id="test.input"
            type="text"
          />
        </div>
        <div
          data-cy="textInput-hintContent"
        />
      </div>
    </FormFieldWrapper>
  </div>
</TextInput>
`;

exports[`TextInput should render all appearances with props 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="test.input.standard"
  >
    standard
  </label>
  <FormFieldWrapper
    id="test.input.standard"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should render all appearances with props 2`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
  color: var(--themeError,#EB293A);
  fill: var(--themeError,#EB293A);
}

<div
  data-cy="textInput textInput.error"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="test.input.error"
  >
    error
  </label>
  <FormFieldWrapper
    id="test.input.error"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should render all appearances with props 3`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.success"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="test.input.success"
  >
    success
  </label>
  <FormFieldWrapper
    id="test.input.success"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should render node as inputLabel 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="test.input"
  >
    <span>
      My Test Node
    </span>
  </label>
  <FormFieldWrapper
    id="test.input"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;

exports[`TextInput should render string inputLabel 1`] = `
.emotion-0 {
  display: block;
  padding-top: 0;
  margin-top: 0;
  margin-bottom: 4px;
  font-weight: 500;
}

<div
  data-cy="textInput textInput.standard"
>
  <label
    className="emotion-0"
    data-cy="textInput-label"
    htmlFor="test.input"
  >
    Test Input
  </label>
  <FormFieldWrapper
    id="test.input"
  >
    <Component />
  </FormFieldWrapper>
</div>
`;
